--- a/nodeproject-1/package.json
+++ b/nodeproject-1/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nodeproject-1",
   "version": "1.0.0",
-  "description": "Learning Nodejs",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "Nurat Lawal",
   "license": "ISC",
   "dependencies": {
